--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
     const RUNNER_START_X = 10, RUNNER_START_Y = 400;
     const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
-    const OBSTACLE_SPEED_BASE = 4;
-    const OBSTACLE_FREQUENCY_BASE = 90;
+    const OBSTACLE_SPEED_BASE = 4, OBSTACLE_FREQUENCY_BASE = 90;
     const SCORE_PER_OBSTACLE = 10;
     const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 
@@ -50,6 +49,8 @@
       startBtn: './background/gamestart.png',
       gameOver: './background/gameover.png',
       restart: './background/restart.png',
+      gameComplete: './background/gamecomplete.png',
+      gameOverBackground: './background/gameover_background.png',
       runnerSit: './character/jimin-sit.png',
       runnerFly: './character/jimin-fly.png',
       runnerCrash: './character/jimin-crash.png',
@@ -85,49 +86,27 @@
       canvas.height = CANVAS_HEIGHT;
 
       const scoreText = document.getElementById('score');
-
       let images = {};
-      let totalAssets = 3 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
-      let loadedCount = 0;
-      let gameStarted = false, gameOver = false;
+      let loaded = 0;
+      let total = 11 + ASSETS.backgrounds.length + ASSETS.villains.length + ASSETS.obstacles.length;
+
+      let gameStarted = false, gameOver = false, gameCleared = false, finalTransition = false;
       let score = 0, timer = 0;
-      let jump = false, runnerY = RUNNER_START_Y;
-      let currentStage = 0, villainY = CANVAS_HEIGHT, villainReady = false;
+      let jump = false;
+      let runnerY = RUNNER_START_Y;
+      let currentStage = 0;
+      let villainY = CANVAS_HEIGHT;
+      let villainReady = false;
       let obstacleSpeed = OBSTACLE_SPEED_BASE;
       let obstacleFrequency = OBSTACLE_FREQUENCY_BASE;
-      let currentVillainImage = null;
-      let villainEntering = true;
+      let villainExplode = false, explosionTimer = 0;
 
       const runner = {
-        width: RUNNER_WIDTH,
-        height: RUNNER_HEIGHT,
         x: RUNNER_START_X,
-        y: RUNNER_START_Y
+        y: RUNNER_START_Y,
+        width: RUNNER_WIDTH,
+        height: RUNNER_HEIGHT
       };
-
-      const loadImage = (name, src) => {
-        const img = new Image();
-        img.src = src;
-        img.onload = () => {
-          images[name] = img;
-          loadedCount++;
-          if (loadedCount === totalAssets) drawStartScreen();
-        };
-      };
-
-      loadImage('title', ASSETS.backgroundTitle);
-      loadImage('startBtn', ASSETS.startBtn);
-      loadImage('gameOver', ASSETS.gameOver);
-      loadImage('restart', ASSETS.restart);
-      loadImage('runnerSit', ASSETS.runnerSit);
-      loadImage('runnerFly', ASSETS.runnerFly);
-      loadImage('runnerCrash', ASSETS.runnerCrash);
-
-      ASSETS.backgrounds.forEach((src, i) => loadImage(`bg${i}`, src));
-      ASSETS.villains.forEach((src, i) => loadImage(`villain${i}`, src));
-      ASSETS.obstacles.forEach((src, i) => loadImage(`obstacle${i}`, src));
-
-      const obstacles = [];
 
       class Obstacle {
         constructor(image) {
@@ -138,12 +117,37 @@
           this.image = image;
           this.frame = 0;
         }
-
         draw(wave = false) {
           if (wave) this.y += Math.sin(this.frame++ / 5) * 2;
           ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
         }
       }
+
+      const obstacles = [];
+
+      const loadImage = (name, src) => {
+        const img = new Image();
+        img.src = src;
+        img.onload = () => {
+          images[name] = img;
+          loaded++;
+          if (loaded === total) drawStartScreen();
+        };
+      };
+
+      // 이미지 로딩
+      loadImage('title', ASSETS.backgroundTitle);
+      loadImage('startBtn', ASSETS.startBtn);
+      loadImage('gameOver', ASSETS.gameOver);
+      loadImage('restart', ASSETS.restart);
+      loadImage('gameComplete', ASSETS.gameComplete);
+      loadImage('gameOverBackground', ASSETS.gameOverBackground);
+      loadImage('runnerSit', ASSETS.runnerSit);
+      loadImage('runnerFly', ASSETS.runnerFly);
+      loadImage('runnerCrash', ASSETS.runnerCrash);
+      ASSETS.backgrounds.forEach((src, i) => loadImage(`bg${i}`, src));
+      ASSETS.villains.forEach((src, i) => loadImage(`villain${i}`, src));
+      ASSETS.obstacles.forEach((src, i) => loadImage(`obstacle${i}`, src));
 
       function drawStartScreen() {
         ctx.drawImage(images.title, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
@@ -151,7 +155,7 @@
       }
 
       function drawGameOverScreen() {
-        ctx.drawImage(images.gameOver, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+        ctx.drawImage(images.gameOverBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
         ctx.drawImage(images.restart, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
       }
 
@@ -160,7 +164,7 @@
       }
 
       function animate() {
-        if (gameOver) {
+        if (gameOver && !gameCleared) {
           drawGameOverScreen();
           return;
         }
@@ -169,7 +173,7 @@
         ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
         const stage = Math.min(Math.floor(score / 200), 5);
-        if (stage !== currentStage) {
+        if (stage !== currentStage && !gameCleared) {
           currentStage = stage;
           villainY = CANVAS_HEIGHT;
           villainReady = false;
@@ -177,9 +181,9 @@
           obstacleFrequency = Math.max(20, OBSTACLE_FREQUENCY_BASE - stage * 10);
         }
 
-        ctx.drawImage(images['bg' + currentStage], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        ctx.drawImage(images[`bg${currentStage}`], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
-        if (!villainReady) {
+        if (!villainReady && !villainExplode) {
           villainY -= 5;
           if (villainY <= CANVAS_HEIGHT - VILLAIN_HEIGHT) {
             villainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
@@ -187,14 +191,27 @@
           }
         }
 
-        ctx.drawImage(images['villain' + currentStage], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+        if (!villainExplode) {
+          ctx.drawImage(images[`villain${currentStage}`], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+        }
 
-        if (villainReady && timer % obstacleFrequency === 0) {
+        if (score >= 1200 && !gameCleared) {
+          gameCleared = true;
+          villainExplode = true;
+          explosionTimer = 60;
+        }
+
+        if (villainExplode) {
+          explosionTimer--;
+          if (explosionTimer <= 0) villainExplode = false;
+        }
+
+        if (!gameCleared && villainReady && timer % obstacleFrequency === 0) {
           if (currentStage < 5) {
-            obstacles.push(new Obstacle(images['obstacle' + currentStage]));
+            obstacles.push(new Obstacle(images[`obstacle${currentStage}`]));
           } else {
             for (let i = 0; i < 2; i++) {
-              const img = images['obstacle' + (Math.floor(Math.random() * 5))];
+              const img = images[`obstacle${Math.floor(Math.random() * 5)}`];
               obstacles.push(new Obstacle(img));
             }
           }
@@ -203,9 +220,7 @@
         obstacles.forEach((obs, i) => {
           obs.x -= obstacleSpeed;
           obs.draw(currentStage === 5);
-          if (isCollision(runner, obs)) {
-            gameOver = true;
-          }
+          if (!gameCleared && isCollision(runner, obs)) gameOver = true;
           if (obs.x + obs.width < 0) {
             obstacles.splice(i, 1);
             score += SCORE_PER_OBSTACLE;
@@ -213,48 +228,56 @@
           }
         });
 
-        runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
-        if (runner.y < MAX_JUMP_HEIGHT) {
-          runner.y = MAX_JUMP_HEIGHT;
-        }
-        if (runner.y > RUNNER_START_Y) {
-          runner.y = RUNNER_START_Y;
+        // 점프
+        if (jump && runner.y > MAX_JUMP_HEIGHT) {
+          runner.y -= JUMP_SPEED;
+        } else if (!jump && runner.y < RUNNER_START_Y) {
+          runner.y += JUMP_SPEED;
         }
 
-        const runnerImage = gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit;
+        if (runner.y < MAX_JUMP_HEIGHT) runner.y = MAX_JUMP_HEIGHT;
+        if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+
+        let runnerImage = images.runnerSit;
+        if (gameCleared) {
+          runner.y -= 3;
+          runnerImage = images.runnerFly;
+          if (runner.y < -RUNNER_HEIGHT) finalTransition = true;
+        } else {
+          runnerImage = gameOver ? images.runnerCrash : (jump || runner.y < RUNNER_START_Y) ? images.runnerFly : images.runnerSit;
+        }
+
         ctx.drawImage(runnerImage, runner.x, runner.y, runner.width, runner.height);
+
+        if (gameCleared) {
+          ctx.drawImage(images.gameComplete, (CANVAS_WIDTH - 400) / 2, (CANVAS_HEIGHT - 200) / 2, 400, 200);
+        }
+
+        if (finalTransition) {
+          drawGameOverScreen();
+        }
 
         timer++;
       }
 
       canvas.addEventListener('click', e => {
         const rect = canvas.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
+        const x = e.clientX - rect.left, y = e.clientY - rect.top;
 
         if (!gameStarted) {
-          const btnX = (CANVAS_WIDTH - 200) / 2;
-          const btnY = (CANVAS_HEIGHT + 100) / 2;
+          const btnX = (CANVAS_WIDTH - 200) / 2, btnY = (CANVAS_HEIGHT + 100) / 2;
           if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
             gameStarted = true;
             animate();
           }
-        } else if (gameOver) {
-          const restartX = (CANVAS_WIDTH - 100) / 2;
-          const restartY = (CANVAS_HEIGHT + 50) / 2;
-          if (x >= restartX && x <= restartX + 100 && y >= restartY && y <= restartY + 50) {
-            location.reload();
-          }
+        } else if ((gameOver || finalTransition) && x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+          y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+          location.reload();
         }
       });
 
-      document.addEventListener('keydown', e => {
-        if (e.code === 'Space') jump = true;
-      });
-
-      document.addEventListener('keyup', e => {
-        if (e.code === 'Space') jump = false;
-      });
+      document.addEventListener('keydown', e => { if (e.code === 'Space') jump = true; });
+      document.addEventListener('keyup', e => { if (e.code === 'Space') jump = false; });
     };
   </script>
 </body>
